# competitive-rust

./: Cargo.toml  README.md  new_problem.sh
src/beecrowd/: problem_1041_coordinates_of_a_point.rs
src/codewars/: problem_7001_sort_rectangles_and_circles_by_area_2.rs
src/leetcode/: problem_001_two_sum.rs
